// THIS FILE IS GENERATED
syntax = "proto3";
package bmapi.common;


enum EnumStockMovementReferenceSource {
    EnumStockMovementReferenceSource_None = 0;
    EnumStockMovementReferenceSource_Order = 1;
    EnumStockMovementReferenceSource_Credit = 2;
    EnumStockMovementReferenceSource_TransferFrom = 3;
    EnumStockMovementReferenceSource_TransferTo = 4;
    EnumStockMovementReferenceSource_AssemblyInput = 5;
    EnumStockMovementReferenceSource_AssemblyOutput = 6;
    EnumStockMovementReferenceSource_PurchaseOrder = 7;
}

enum EnumYesNoEither {
    EnumYesNoEither_Either = 0;
    EnumYesNoEither_Yes = 1;
    EnumYesNoEither_No = 2;
}

enum EnumAlcoholType {
    EnumAlcoholType_None = 0;
    EnumAlcoholType_Beer = 1;
    EnumAlcoholType_StillCiderPerry = 2;
    EnumAlcoholType_SparklingCiderPerry = 3;
    EnumAlcoholType_StillWine = 4;
    EnumAlcoholType_SparklingWine = 5;
    EnumAlcoholType_Spirits = 6;
    EnumAlcoholType_ScotchWhisky = 7;
    EnumAlcoholType_IrishWhiskey = 8;
    EnumAlcoholType_TraditionalAfricanBeerFromMalt = 9;
    EnumAlcoholType_BeerFromMalt = 10;
    EnumAlcoholType_TraditionalAfricanBeerNotFromMalt = 11;
    EnumAlcoholType_BeerNotFromMalt = 12;
    EnumAlcoholType_Brandy = 13;
    EnumAlcoholType_SpiritsFromGrape = 14;
    EnumAlcoholType_Whisky = 15;
    EnumAlcoholType_RumAndSugarSpirits = 16;
    EnumAlcoholType_Gin = 17;
    EnumAlcoholType_Vodka = 18;
}

enum EnumStockItemType {
    EnumStockItemType_Unknown = 0;
    EnumStockItemType_Material = 1;
    EnumStockItemType_Product = 2;
}

enum EnumDistributionType {
    EnumDistributionType_None = 0;
    EnumDistributionType_Delivery = 1;
    EnumDistributionType_Courier = 2;
    EnumDistributionType_Collection = 3;
}

enum EnumExportIncotermCode {
    EnumExportIncotermCode_None = 0;
    EnumExportIncotermCode_EXW = 1;
    EnumExportIncotermCode_FCA = 2;
    EnumExportIncotermCode_FAS = 3;
    EnumExportIncotermCode_FOB = 4;
    EnumExportIncotermCode_CFR = 5;
    EnumExportIncotermCode_CIF = 6;
    EnumExportIncotermCode_CIP = 7;
    EnumExportIncotermCode_DPU = 8;
    EnumExportIncotermCode_DDP = 9;
    EnumExportIncotermCode_CPT = 10;
    EnumExportIncotermCode_DAP = 11;
}

enum EnumStandardOrder {
    EnumStandardOrder_FullPriceDutyPaid = 0;
    EnumStandardOrder_PriceExcludingDutyDutySuspended = 1;
    EnumStandardOrder_FullPriceDutyPaidElsewhere = 2;
    EnumStandardOrder_ExportDutySuspended = 3;
}

enum EnumCreditCalculationType {
    EnumCreditCalculationType_None = 0;
    EnumCreditCalculationType_OfFollowingMonth = 1;
    EnumCreditCalculationType_DaysAfterInvoice = 2;
    EnumCreditCalculationType_DaysAfterInvoiceMonth = 3;
    EnumCreditCalculationType_OfCurrentMonth = 4;
}

enum EnumOrderSource {
    EnumOrderSource_None = 0;
    EnumOrderSource_BrewMan = 1;
    EnumOrderSource_WooCommerce = 2;
    EnumOrderSource_Shopify = 3;
    EnumOrderSource_Sellar = 4;
}

enum EnumOrderStatus {
    EnumOrderStatus_None = 0;
    EnumOrderStatus_Open = 1;
    EnumOrderStatus_Complete = 2;
    EnumOrderStatus_Historic = 3;
    EnumOrderStatus_Cancelled = 4;
    EnumOrderStatus_Posting = 5;
}

enum EnumRetailPaymentMethod {
    EnumRetailPaymentMethod_None = 0;
    EnumRetailPaymentMethod_DebitCreditCard = 1;
    EnumRetailPaymentMethod_Other = 2;
    EnumRetailPaymentMethod_Cash = 3;
}

enum EnumDiscountBasis {
    EnumDiscountBasis_None = 0;
    EnumDiscountBasis_Percent = 1;
    EnumDiscountBasis_CurrencyPerUnit = 2;
    EnumDiscountBasis_CurrencyPerBarrel = 3;
}

enum EnumDayOfWeek {
    EnumDayOfWeek_None = 0;
    EnumDayOfWeek_Monday = 1;
    EnumDayOfWeek_Tuesday = 2;
    EnumDayOfWeek_Wednesday = 3;
    EnumDayOfWeek_Thursday = 4;
    EnumDayOfWeek_Friday = 5;
    EnumDayOfWeek_Saturday = 6;
    EnumDayOfWeek_Sunday = 7;
}

